bug 87819 patch by paper@animecity.nu r=pavlov sr=tor Transparent GIFs with transparency on all four sides render non-transparent portions against the left and top sides